# laam

./: .gitignore  LICENSE  README.md  pyproject.toml
laam/commands/: train_llama.py  train_tokenizer.py
laam/data/: kernel_source.py
laam/model/: llama_model.py  tokenizer.py
